@@ -2685,6 +2685,130 @@ add_dummies <- function(dir, Log)
             if (!any) resultLog(Log, "OK")
         }
 
+        test_omp <-
+            config_val_to_logical(Sys.getenv("_R_CHECK_SHLIB_OPENMP_FLAGS_", "FALSE"))
+        makefiles <- Sys.glob(file.path("src",
+                                        c("Makevars", "Makevars.in",
+                                          "Makevars.win",
+                                          "Makefile", "Makefile.win")))
+
+        if(length(makefiles) && test_omp) {
+            checkingLog(Log, "use of SHLIB_OPENMP_*FLAGS in Makefiles")
+            ## If any of these flags are included in PKG_*FLAGS, it
+            ## should also be included in PKG_LIBS.  And it is
+            ## not portable to use more than one of these in one package.
+            any <- msg2 <- FALSE
+            for (m in makefiles) {
+                lines <- readLines(m, warn = FALSE)
+                ## Combine lines ending in escaped newlines.
+                if(any(ind <- grepl("[\\]$", lines, useBytes = TRUE))) {
+                    ## Eliminate escape.
+                    lines[ind] <-
+                        sub("[\\]$", "", lines[ind], useBytes = TRUE)
+                    ## Determine ids of blocks that need to be joined.
+                    ind <- seq_along(ind) - c(0, cumsum(ind)[-length(ind)])
+                    ## And join.
+                    lines <- unlist(lapply(split(lines, ind), paste,
+                                           collapse = " "))
+                }
+                ## Truncate at first comment char, skip empty lines
+                lines <- sub("#.*", "", lines)
+                lines <- lines[nzchar(lines)]
+
+                c1 <- grepl("^[[:space:]]*PKG_LIBS", lines, useBytes = TRUE)
+
+                used <- character()
+                for (f in c("C", "CXX", "F", "FC"))  {
+                    this <- paste0(f, "FLAGS")
+                    pat <- paste0("^[[:space:]]*PKG_", this, ".*SHLIB_OPENMP_", this)
+                    if(any(grepl(pat, lines, useBytes = TRUE))) {
+                        used <- c(used, this)
+                        ## The recommendation is to use _FFLAGS to compile
+                        ## and _CFLAGS to link with F77 code (which is linked
+                        ## by the C compiler)
+                        this2 <- if (f == "F") "CFLAGS" else this
+                        pat2 <- paste0("SHLIB_OPENMP_", this2)
+                        if(!any(grepl(pat2, lines[c1], useBytes = TRUE))) {
+                            if (!any) noteLog(Log)
+                            any <- TRUE
+                            msg <- if (f == "F")
+                                "SHLIB_OPENMP_FFLAGS is included in PKG_FFLAGS but not SHLIB_OPENMP_CFLAGS in PKG_LIBS\n"
+                            else
+                                sprintf("SHLIB_OPENMP_%s is included in PKG_%s but not in PKG_LIBS\n",
+                                           this, this)
+                            printLog(Log, "  ", m, ": ", msg)
+                        }
+                    } else {
+                        ## several packages have the wrong flag
+                        pat <- paste0("^[[:space:]]*PKG_", this, ".*SHLIB_OPENMP_")
+                        if(any(c2 <- grepl(pat, lines, useBytes = TRUE))) {
+                            if (!any) noteLog(Log)
+                            any <- TRUE
+                            ## assume just one
+                            l <- lines[c2][1L]
+                            found <- sub(".*SHLIB_OPENMP_([A-Z]*).*", "\\1", l, useBytes = TRUE)
+                            printLog(Log,"  ", m, ": ",
+                                     sprintf("incorrect macro SHLIB_OPENMP_%s included in PKG_%s\n",
+                                             found, this))
+                        }
+                    }
+                }
+                ## Now check if PKG_LIBS includes a macro that is not used
+                ## in PKG_*FLAGS, or more than one.
+                cnt <- 0L
+                for (f in c("C", "CXX", "F", "FC"))  {
+                    this <- paste0(f, "FLAGS")
+                    pat2 <- paste0("SHLIB_OPENMP_", this)
+                    res <- any(grepl(pat2 , lines[c1], useBytes = TRUE))
+                    cnt <- cnt + res
+                    if (this %in% used) next
+                    ## it is recommended to include _CFLAGS if _FFLAGS is used.
+                    if (f == "C" && "FFLAGS" %in% used) next
+                    if (res) {
+                        if (!any) noteLog(Log)
+                        any <- TRUE
+                        printLog(Log,"  ", m, ": ",
+                                 sprintf("SHLIB_OPENMP_%s is included in PKG_LIBS but not in PKG_%s\n",
+                                         this, this))
+                   }
+                }
+                if (cnt > 1L) {
+                    if (!any) noteLog(Log)
+                    any <- TRUE
+                    printLog(Log, "  ", m, ": ",
+                             "it is not portable to include multiple",
+                             " SHLIB_OPENMP_*' macros in PKG_LIBS",
+                             "\n")
+                }
+
+                ## several packages include one of these in PKG_CPPFLAGS
+                ## which is used for both C and C++ code.
+                pat <- "^[[:space:]]*PKG_CPPFLAGS.*SHLIB_OPENMP_"
+                if(any(grepl(pat, lines, useBytes = TRUE))) {
+                    if (!any) noteLog(Log)
+                    any <- TRUE
+                    msg2 <- TRUE
+                    printLog(Log,"  ", m, ": ",
+                             "it is not portable to include",
+                             " SHLIB_OPENMP_*' macros in PKG_CPPFLAGS",
+                             "\n")
+                }
+            }
+            if (!any) resultLog(Log, "OK")
+            else {
+                wrapLog("Use of these macros is discussed in sect 1.2.1.1 of",
+                        paste0(sQuote("Writing R Extensions"), "."),
+                        "The macros for different languages may differ",
+                        "so the matching macro must be used in",
+                        "PKG_CXXFLAGS (etc) and match that used in",
+                        "PKG_LIBS (except for F77: see the manual).\n")
+                if (msg2)
+                    wrapLog("PKG_CPPFLAGS is used for both C and C++ code",
+                            "so it is not portable to use it",
+                            "for these macros.\n")
+            }
+        }
+
         ## Check include directives for use of R_HOME which may contain
         ## spaces for which there is no portable way to quote/escape.
         all_files <-
@@ -3092,9 +3216,9 @@ add_dummies <- function(dir, Log)
                          sQuote(basename(exfile)),
                          " failed")
                 ## Try to spot the offending example right away.
-                ## Sometimes processes need extra time to shut down, 
+                ## Sometimes processes need extra time to shut down,
                 ## particularly parallel cluster on Windows, hence a hack to retry after 2 sec:
-                txt <- tryCatch(suppressWarnings(readLines(exout, warn = FALSE)), 
+                txt <- tryCatch(suppressWarnings(readLines(exout, warn = FALSE)),
                                 error = function(e){Sys.sleep(2); readLines(exout, warn = FALSE)})
                 txt <- paste(txt, collapse = "\n")
                 ## Look for the header section anchored by a
@@ -3123,9 +3247,9 @@ add_dummies <- function(dir, Log)
             ## deprecated , as the next release will make
             ## them defunct and hence using them an error.
             bad <- FALSE
-            ## Sometimes processes need extra time to shut down, 
+            ## Sometimes processes need extra time to shut down,
             ## particularly parallel cluster on Windows, hence a hack to retry after 2 sec:
-            lines <- tryCatch(suppressWarnings(readLines(exout, warn = FALSE)), 
+            lines <- tryCatch(suppressWarnings(readLines(exout, warn = FALSE)),
                               error = function(e){Sys.sleep(2); readLines(exout, warn = FALSE)})
             bad_lines <- grep("^Warning: .*is deprecated.$",
                               lines, useBytes = TRUE, value = TRUE)
@@ -5302,7 +5426,7 @@ add_dummies <- function(dir, Log)
         ## until this is tested on Windows
         Sys.setenv("_R_CHECK_R_ON_PATH_" = if(WINDOWS) "FALSE" else "TRUE")
         Sys.setenv("_R_CHECK_PACKAGES_USED_IN_TESTS_USE_SUBDIRS_" = "TRUE")
-        Sys.setenv("_R_CHECK_CONNECTIONS_LEFT_OPEN_" = "TRUE")     
+        Sys.setenv("_R_CHECK_CONNECTIONS_LEFT_OPEN_" = "TRUE")
         R_check_vc_dirs <- TRUE
         R_check_executables_exclusions <- FALSE
         R_check_doc_sizes2 <- TRUE
