@@ -141,6 +141,13 @@
       supported, otherwise to the C++98 standard.
     }
   }
+  
+  \subsection{UTILITIES}{
+    \itemize{
+      \item \command{R CMD check} now optionally checks makefiles for
+      correct and portable use of the \samp{SHLIB_OPENMP_*FLAGS} macros.
+    }
+  }
 
   \subsection{TESTING}{
     \itemize{
